--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,4 @@
 # ...even if they are in subdirectories
 !*/
 
-layout_autogen.json
-sandboxing/layout_autogen.json
-sandboxing/main.go
+sandboxing/
